--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -28,4 +28,12 @@
   text-decoration: none;
 }
 
+ion-menu::part(backdrop) {
+  background-color: slategray;
+}
 
+ion-menu::part(container) {
+  border-radius: 0 20px 20px 0;
+
+  box-shadow: 4px 0px 16px darkslategray;
+}
