--- a/src/app/camera/camera.page.html
+++ b/src/app/camera/camera.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>camera||gallery</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button default-href="#"></ion-back-button>
+    </ion-buttons>
+    <ion-title>camera/gallery</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -8,7 +11,17 @@
   <ion-grid>
     <ion-row>
       <ion-col size="6" *ngFor="let photo of photoService.photos">
-        <ion-img [src]="photo.webviewPath"></ion-img>
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>Card Title</ion-card-title>
+            <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+          </ion-card-header>
+          <ion-img [src]="photo.webviewPath"></ion-img>
+
+          <ion-card-content>
+            <h2>filepath: </h2> {{photo.filepath}}
+          </ion-card-content>
+        </ion-card>
       </ion-col>
     </ion-row>
   </ion-grid>
