--- a/src/app/camera/camera.page.html
+++ b/src/app/camera/camera.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button default-href="#"></ion-back-button>
+      <ion-back-button (click)="onBackUrl()" default-href="#"></ion-back-button>
     </ion-buttons>
     <ion-title>camera/gallery</ion-title>
   </ion-toolbar>
