--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,12 +10,14 @@
       <ion-toggle [checked]="true" [enableOnOffLabels]="true" slot="end" (ionChange)="onToggleClick($event)"></ion-toggle>
     </ion-item>
     <ion-item>
-      Take product photo
+      Take photo
       <ion-button
+        style="height: 70px;width: 70px;"
         slot="end"
-        size="large"
         [routerLink]="['/camera']">
-        <ion-icon name="camera-outline"></ion-icon>
+        <ion-icon
+          size="small"
+          name="camera-outline"></ion-icon>
       </ion-button>
     </ion-item>
   </ion-content>
