--- a/src/app/list-item/list-item.page.html
+++ b/src/app/list-item/list-item.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button default-href="#"></ion-back-button>
+      <ion-back-button (click)="onBackUrl()" default-href="#"></ion-back-button>
     </ion-buttons>
     <ion-title>list-item</ion-title>
   </ion-toolbar>
@@ -10,20 +10,23 @@
 <ion-content>
   <ion-grid>
     <ng-container *ngIf="descriptionCards.length === 0">
-      <ion-row>
-        <ion-col>
+      <ion-row class="ion-justify-content-center">
+        <ion-col size="11" >
           <ion-card>
             <ion-card-header class="ion-text-center">
               <ion-card-title > <ion-icon name="sad-outline" size="large"></ion-icon></ion-card-title>
               <ion-card-subtitle>add an image so it doesn't look so lonely </ion-card-subtitle>
             </ion-card-header>
             <div class="ion-text-center">
-              <ion-button fill="clear">+ <ion-icon name="images-outline" ></ion-icon></ion-button>
-              <ion-button fill="clear">+<ion-icon name="camera-outline" ></ion-icon></ion-button>
+              <ion-button fill="clear" [routerLink]="['']">
+                + <ion-icon name="images-outline" ></ion-icon>
+              </ion-button>
+              <ion-button fill="clear" [routerLink]="['/camera']">
+                +<ion-icon name="camera-outline" ></ion-icon>
+              </ion-button>
             </div>
           </ion-card>
         </ion-col>
-
       </ion-row>
     </ng-container>
 
