icon list, unshift instead of push, unstable camera saving in list

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -43,7 +43,7 @@
       </ion-buttons>
       <ion-buttons slot="end">
         <ion-button [routerLink]="['/list-item']">
-          <ion-icon name="cart-outline"></ion-icon>
+          <ion-icon name="list-outline"></ion-icon>
         </ion-button>
       </ion-buttons>
       <ion-title>App</ion-title>
@@ -72,7 +72,7 @@
                 <ion-label position="floating" >Name</ion-label>
                 <ion-input
                   placeholder="Enter name"
-                  clear-input="true"
+                  [clearOnEdit]="true"
                   [(ngModel)]="descriptionCard.name"
                   name="name"></ion-input>
                 <ion-note slot="helper">Enter a product name</ion-note>
