--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -35,5 +35,11 @@ ion-menu::part(backdrop) {
 ion-menu::part(container) {
   border-radius: 0 20px 20px 0;
 
-  box-shadow: 4px 0px 16px darkslategray;
+  box-shadow: 4px 0 16px darkslategray;
+}
+
+svg{
+  position: absolute;
+  width: 200%;
+  top: 0;
 }
