--- a/src/app/form/form.page.html
+++ b/src/app/form/form.page.html
@@ -1,5 +1,5 @@
 <ion-header translucent="true" class="ion-no-border">
-  <ion-toolbar style="opacity:.5">
+  <ion-toolbar style="opacity:.8">
     <ion-buttons slot="start">
       <ion-back-button  (click)="onBackUrl()" defaultHref="#"></ion-back-button>
     </ion-buttons>
@@ -8,7 +8,8 @@
 </ion-header>
 
 <ion-content fullscreen="true" style="background: #1a1a1a">
-  <ion-card class="ion-align-self-center">
+
+  <ion-card class="form--card">
     <form (ngSubmit)="onLogin()" >
       <ion-list>
         <ion-item>
