--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -25,7 +25,7 @@
   </ion-content>
 </ion-menu>
 
-<div class="ion-page" id="main-content">
+<div class="ion-page content" id="main-content">
   <ion-header *ngIf="isLoading">
 <!--    LOADER-->
 <!--    <ion-toolbar >-->
@@ -52,11 +52,8 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-content [fullscreen]="true" >
-    <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-      <path fill="#FF0066" d="M36.5,-51.9C49.8,-55.5,64.7,-50.8,67.6,-40.7C70.6,-30.6,61.6,-15.3,51,-6.1C40.4,3.1,28.2,6.2,25.4,16.5C22.6,26.8,29.2,44.4,26.5,51.2C23.9,57.9,11.9,53.8,5.1,44.9C-1.6,36,-3.3,22.3,-6.1,15.6C-8.9,8.9,-12.8,9.3,-17.3,7.9C-21.8,6.5,-26.8,3.2,-31.3,-2.6C-35.9,-8.5,-40.1,-17,-42.9,-31C-45.7,-45.1,-47.1,-64.6,-39.7,-64.3C-32.4,-64.1,-16.2,-44.1,-2.3,-40.1C11.6,-36.1,23.2,-48.2,36.5,-51.9Z" transform="translate(100 100)" />
-    </svg>
-    <ion-grid>
+  <ion-content  [fullscreen]="true" >
+    <ion-grid >
       <ion-col size="6" >
         <ion-card>
           <ion-img  alt="live image" [src]="descriptionCard.source"></ion-img>
