--- a/src/app/components/form/form.page.scss
+++ b/src/app/components/form/form.page.scss
@@ -8,7 +8,7 @@ ion-toolbar{
 }
 
 ion-content{
- --ion-background-color: 50% 10% url(../../assets/images/slidePhotos.jpg) no-repeat;
+ --ion-background-color: 50% 10% url(../../../assets/images/slidePhotos.jpg) no-repeat;
 }
 
 .form--card{
