--- a/src/app/components/home/home.page.html
+++ b/src/app/components/home/home.page.html
@@ -77,7 +77,7 @@
                   [clearOnEdit]="true"
                   [(ngModel)]="descriptionCard.name"
                   name="name"></ion-input>
-                <ion-note slot="helper">Enter a product name</ion-note>
+                <ion-note slot="helper">Enter a Title</ion-note>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">Description</ion-label>
@@ -96,8 +96,8 @@
                   [(ngModel)]="descriptionCard.source"
                   name="source">
                 </ion-input>
-                <ion-button >
-                  <ion-icon name="cloud-outline"></ion-icon>
+                <ion-button (click)="onSelectFromDevice()">
+                  <ion-icon name="arrow-redo-outline"></ion-icon>
                 </ion-button>
                 <ion-note slot="helper">Enter a source or select an image</ion-note>
               </ion-item>
