--- a/src/app/components/log-enter/log-enter.page.html
+++ b/src/app/components/log-enter/log-enter.page.html
@@ -17,7 +17,12 @@
 
           <ion-icon
             slot="icon-only"
-            name="chevron-forward-outline"></ion-icon>
+            size="small"
+            name="logo-google"></ion-icon>
+          <ion-icon
+            size="small"
+            slot="icon-only"
+            name="arrow-forward-outline"></ion-icon>
         </ion-button>
       </ion-col>
     </ion-row>
@@ -32,7 +37,7 @@
           <ion-icon
             size="small"
             slot="icon-only"
-            name="person-outline"></ion-icon>
+            name="logo-apple"></ion-icon>
           <ion-icon
             size="small"
             slot="icon-only"
