fix: - home file select

--- a/src/app/components/home/home.page.html
+++ b/src/app/components/home/home.page.html
@@ -123,6 +123,8 @@
 
 
     </ion-grid>
+    <input type="file" (change)="onFileSelected($event)">
+    <button (click)="upload()">Subir imagen</button>
   </ion-content>
 </div>
 
