add: -splash screen - https://github.com/ionic-team/capacitor-assets

--- a/src/app/components/home/home.page.scss
+++ b/src/app/components/home/home.page.scss
@@ -40,3 +40,8 @@ ion-menu::part(container) {
 
 
 
+@media screen and (min-width: 600px) {
+  .media-screen-container {
+    color: #ff5b71;
+  }
+}
