--- a/src/app/components/home/home.page.html
+++ b/src/app/components/home/home.page.html
@@ -1,131 +1,137 @@
-<ion-menu type="push" content-id="main-content">
-  <ion-header class="ion-no-border">
-    <ion-toolbar>
-      <ion-title>Menu Content</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content>
-    <ion-item>
-      <ion-label slot="start"><ion-icon name="contrast-outline"></ion-icon></ion-label>
-      <ion-toggle [checked]="true" [enableOnOffLabels]="true" slot="end" (ionChange)="onToggleClick($event)"></ion-toggle>
-    </ion-item>
-    <div [routerLink]="['/camera']">
+<div class="media-screen-container">
+  <ion-menu type="push" content-id="main-content">
+    <ion-header class="ion-no-border">
+      <ion-toolbar>
+        <ion-title>Menu Content</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
       <ion-item>
-        Take photo
-        <ion-button
-          style="height: 50px;width: 50px;"
-          slot="end"
-        >
-          <ion-icon
-            size="small"
-            name="camera-outline"></ion-icon>
-        </ion-button>
+        <ion-label slot="start"><ion-icon name="contrast-outline"></ion-icon></ion-label>
+        <ion-toggle [checked]="true" [enableOnOffLabels]="true" slot="end" (ionChange)="onToggleClick($event)"></ion-toggle>
       </ion-item>
-    </div>
-  </ion-content>
-</ion-menu>
+      <div [routerLink]="['/camera']">
+        <ion-item>
+          Take photo
+          <ion-button
+            style="height: 50px;width: 50px;"
+            slot="end"
+          >
+            <ion-icon
+              size="small"
+              name="camera-outline"></ion-icon>
+          </ion-button>
+        </ion-item>
+      </div>
+    </ion-content>
+  </ion-menu>
 
-<div class="ion-page content" id="main-content">
-  <ion-header *ngIf="isLoading">
-<!--    LOADER-->
-<!--    <ion-toolbar >-->
-<!--      <ion-title>Toolbar</ion-title>-->
-<!--      <ion-progress-bar type="indeterminate"></ion-progress-bar>-->
-<!--    </ion-toolbar>-->
-  </ion-header>
-  <ion-header class="ion-no-border">
-    <ion-toolbar >
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-      <ion-buttons slot="end">
-        <ion-button [routerLink]="['/form']">
-          <ion-icon name="log-in-outline"></ion-icon>
-        </ion-button>
-      </ion-buttons>
-      <ion-buttons slot="end">
-        <ion-button [routerLink]="['/list-item']">
-          <ion-icon name="list-outline"></ion-icon>
-        </ion-button>
-      </ion-buttons>
-      <ion-title>App</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="ion-page content" id="main-content">
+    <ion-header *ngIf="isLoading">
+      <!--    LOADER-->
+      <!--    <ion-toolbar >-->
+      <!--      <ion-title>Toolbar</ion-title>-->
+      <!--      <ion-progress-bar type="indeterminate"></ion-progress-bar>-->
+      <!--    </ion-toolbar>-->
+    </ion-header>
+    <ion-header class="ion-no-border">
+      <ion-toolbar >
+        <ion-buttons slot="start">
+          <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-buttons slot="end">
+          <ion-button [routerLink]="['/form']">
+            <ion-icon name="log-in-outline"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+        <ion-buttons slot="end">
+          <ion-button [routerLink]="['/list-item']">
+            <ion-icon name="list-outline"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+        <ion-title>App</ion-title>
+      </ion-toolbar>
+    </ion-header>
 
-  <ion-content  [fullscreen]="true" >
-    <ion-grid >
-      <ion-col size="6" >
-        <ion-card>
-          <ion-img  alt="live image" [src]="descriptionCard.source"></ion-img>
-          <ion-card-header>
-            <ion-card-title>{{descriptionCard.name || "Example name"}}</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            {{descriptionCard.description || "Example description"}}
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
 
-      <form #myForm="ngForm" (ngSubmit)="onSubmit(myForm)" >
-        <ion-row>
-          <ion-col>
-            <ion-list>
-              <ion-item>
-                <ion-label position="floating" >Name</ion-label>
-                <ion-input
-                  placeholder="Enter name"
-                  [clearOnEdit]="true"
-                  [(ngModel)]="descriptionCard.name"
-                  name="name"></ion-input>
-                <ion-note slot="helper">Enter a Title</ion-note>
-              </ion-item>
-              <ion-item>
-                <ion-label position="floating">Description</ion-label>
-                <ion-input
-                  placeholder="Enter description"
-                  clear-input="true"
-                  [(ngModel)]="descriptionCard.description"
-                  name="description"></ion-input>
-                <ion-note slot="helper">Enter a description</ion-note>
-              </ion-item>
-              <ion-item>
-                <ion-label position="floating">Source</ion-label>
-                <ion-input
-                  placeholder="Enter source"
-                  clear-input="true"
-                  [(ngModel)]="descriptionCard.source"
-                  name="source">
-                </ion-input>
-                <ion-button (click)="onSelectFromDevice()">
-                  <ion-icon name="arrow-redo-outline"></ion-icon>
+    <ion-content  [fullscreen]="true" >
+      <ion-grid >
+        <ion-col size="6" >
+          <ion-card>
+            <ion-img  alt="live image" [src]="descriptionCard.source"></ion-img>
+            <ion-card-header>
+              <ion-card-title>{{descriptionCard.name || "Example name"}}</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              {{descriptionCard.description || "Example description"}}
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+
+        <div class="content-container">lorem ipsum</div>
+
+        <form #myForm="ngForm" (ngSubmit)="onSubmit(myForm)" >
+          <ion-row>
+            <ion-col>
+              <ion-list>
+                <ion-item>
+                  <ion-label position="floating" >Name</ion-label>
+                  <ion-input
+                    placeholder="Enter name"
+                    [clearOnEdit]="true"
+                    [(ngModel)]="descriptionCard.name"
+                    name="name"></ion-input>
+                  <ion-note slot="helper">Enter a Title</ion-note>
+                </ion-item>
+                <ion-item>
+                  <ion-label position="floating">Description</ion-label>
+                  <ion-input
+                    placeholder="Enter description"
+                    clear-input="true"
+                    [(ngModel)]="descriptionCard.description"
+                    name="description"></ion-input>
+                  <ion-note slot="helper">Enter a description</ion-note>
+                </ion-item>
+                <ion-item>
+                  <ion-label position="floating">Source</ion-label>
+                  <ion-input
+                    placeholder="Enter source"
+                    clear-input="true"
+                    [(ngModel)]="descriptionCard.source"
+                    name="source">
+                  </ion-input>
+                  <ion-button (click)="onSelectFromDevice()">
+                    <ion-icon name="arrow-redo-outline"></ion-icon>
+                  </ion-button>
+                  <ion-note slot="helper">Enter a source or select an image</ion-note>
+                </ion-item>
+              </ion-list>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col>
+              <div class="ion-text-center">
+                <ion-button color="danger" fill="outline" >
+                  <ion-icon slot="start" name="close-outline"></ion-icon>Clear
                 </ion-button>
-                <ion-note slot="helper">Enter a source or select an image</ion-note>
-              </ion-item>
-            </ion-list>
-          </ion-col>
-        </ion-row>
 
-        <ion-row>
-          <ion-col>
-            <div class="ion-text-center">
-              <ion-button color="danger" fill="outline" >
-                <ion-icon slot="start" name="close-outline"></ion-icon>Clear
-              </ion-button>
-
-              <ion-button type="submit" (click)="onClickAddButton()" class="ion-margin-horizontal">
-                <ion-icon name="add-outline" slot="start"></ion-icon>Add
-              </ion-button>
-            </div>
-          </ion-col>
-        </ion-row>
-      </form>
+                <ion-button type="submit" (click)="onClickAddButton()" class="ion-margin-horizontal">
+                  <ion-icon name="add-outline" slot="start"></ion-icon>Add
+                </ion-button>
+              </div>
+            </ion-col>
+          </ion-row>
+        </form>
 
 
 
-    </ion-grid>
-    <input type="file" (change)="onFileSelected($event)">
-    <button (click)="upload()">Subir imagen</button>
-  </ion-content>
+      </ion-grid>
+      <input type="file" (change)="onFileSelected($event)">
+      <button (click)="upload()">Subir imagen</button>
+    </ion-content>
+  </div>
+
 </div>
 
 
